--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-Flask
-langchain
-ollama
-python-dotenv
-SQLAlchemy
-Jinja2
+Flask>=2.0.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-core>=0.1.10
+langchain-ollama>=0.0.3
+langchain-openai>=0.0.3  # Added for memory support
+python-dotenv>=0.19.0
+SQLAlchemy>=1.4.0
+Jinja2>=3.0.0
+numpy>=1.20.0
+faiss-cpu>=1.7.0
+quart>=0.18.0
+hypercorn>=0.14.0
+aiohttp>=3.8.0
+certifi>=2023.7.22
