--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ API_KEY=your_api_key_here
 DATABASE_URL=sqlite:///database.db
 OLLAMA_API_URL=http://localhost:11434/api/chat
 SECRET_KEY=your_secret_key_here
+
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=$2b$12$9kGX3.lD0hCA3PGx1MCF8.AA4GQXt4F3N3ZSY0yQ0tS0Jm7uQu3wu
