--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ quart>=0.18.0
 hypercorn>=0.14.0
 aiohttp>=3.8.0
 certifi>=2023.7.22
+aiosqlite>=0.17.0
+sqlalchemy[asyncio]>=1.4.0
+markdown>=3.4.0
+bleach>=4.1.0
